--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": "≥ 18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "npx tsx node_modules/.bin/knex",
@@ -14,6 +17,15 @@
   "author": "",
   "license": "ISC",
   "description": "",
+
+  "dependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "dotenv": "^17.2.1",
+    "fastify": "^5.4.0",
+    "knex": "^3.1.0",
+    "pg": "^8.16.3",
+    "zod": "^4.0.15"
+  },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^24.2.0",
@@ -21,17 +33,10 @@
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^8.57.1",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.4",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "vitest": "^3.2.4"
-  },
-  "dependencies": {
-    "@fastify/cookie": "^11.0.2",
-    "dotenv": "^17.2.1",
-    "fastify": "^5.4.0",
-    "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
-    "zod": "^4.0.15"
   }
 }
