Corrige versão do Node para deploy no Render

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node": "≥ 18"
+    "node": ">= 18"
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
