Adiciona script start e corrige main para Render

--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
   "name": "02---api-rest-nodejs",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/server.cjs",
   "type": "module",
   "engines": {
-    "node": ">= 18"
+    "node": ">=18"
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "npx tsx node_modules/.bin/knex",
     "lint": "eslint src --ext .ts --fix",
-    "build": "tsup src --out-dir build",
+    "build": "tsup src/server.ts --out-dir build",
+    "start": "node build/server.cjs",
     "test": "vitest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "dotenv": "^17.2.1",
